--- a/css/estilos.css
+++ b/css/estilos.css
@@ -158,7 +158,7 @@ nav a:hover {
   position: relative;                                  /* posicionamiento relativo (frente al overlay) */
   z-index: 1;                                          /* encima del overlay */
   text-shadow: 2px 2px 6px rgba(0,0,0,0.4);            /* sombra para legibilidad */
-  font-size: 3rem;                                  /* tamaño del texto en hero (ajustado) */
+  font-size: 2.5rem;                                  /* tamaño del texto en hero (ajustado) */
   margin: 0.5rem 0;                                    /* margen vertical */
   padding: 0 1rem;                                     /* padding horizontal */
   margin-top: 0px;
@@ -924,7 +924,7 @@ html { scroll-behavior: smooth; }
     font-family: fantasy;
     font-variant-caps: all-petite-caps;
     font-weight: bold;            /* 🔹 Negrita */
-    text-decoration: underline;   /* 🔹 Subrayado */
+    text-decoration: underline;
   }
 
   .hero {
