--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 /* ==============================
-   Root / variables globales
+   Root / variables globalesS
    ============================== */
 /* Define colores y valores reusables */
 :root {
